4.1 [Next Release]:
- Added show detail previous bans message on join
- Added permission: exempt from kicks (mcbans.kick.exempt)
- Fixed language file warning
- Fixed ban sync

4.0:
- Added NoCheatPlus, AntiCheat data sending to mcbans
- Added MCBansAPI class for other plugin integration
- Added support Vault provides other permission plugin
- Added API key valid check
- Added player name valid check
- Added config file version check (Auto recreate config.yml as necessary)
- Added more localizable messages
- Added timeout configuration
- Added failsafe configuration
- Added player lookup API
- Added ban lookup command/API
- Added support colored messages (color/format code: &<char>)
- Added mcbans.hideview permission (hide view alts/previous bans on connect)
- Added altlookup command for premium servers
- Added banip command for bans an IP address (Unban with /unban <IP>)
- Rewrited permission structure and permission node
- Rewrited command structure
- Rewrited localize structure
- Rewrited logging structure
- Rewrited configuration structure (Change settings.yml to config.yml)
- Fixed enableMaxAlts configuration not working
- Fixed minor exception while player joining the server
- Fixed sync ban at the incorrect interval
- Fixed syncBans configuration not working (Moved to enableAutoSync config)
- Fixed tempban w(week) parameter not working
- Fixed onJoinMCBansMessage configuration not working
- Fixed kicking wrong player

3.9 R1 DIAMOND:
- Added Rollback for; CoreProtect, Hawkeye, LogBlock.
- Added "/mcbans sync all" to force a resync
- Added throttling to syncing/callback
- Added Events for plugin actions
- Removed second call to mcbans API (performance increase)
- Removed NoCheatPlus data sending to mcbans (may return)
- Removed Logblock data sent to mcbans
- Fixed mcbans get call/sync to proper times to next action

3.8 R3:
- Sync race condition fixed
- (Alpha) Banning when MCBans is down
- Fixed async login

3.8 R2: