@@ -119,6 +119,12 @@ autoSyncInterval: 5
 #   DEFAULT: false, RECOMMENDED: true
 onJoinMCBansMessage: false
 
+# sendDetailPrevBansOnJoin:
+#   Show detail previous bans information (banned server, reason, issued by) on player join.
+#   (Require "mcbans.view.bans" permission. "mcbans.hideview" is exempt permission.)
+#   DEFAULT: true
+sendDetailPrevBansOnJoin: true
+
 # minRep:
 #   Minimum reputation a user may have before being disallowed access to the server.
 #   DEFAULT: 3 (-1 to disable)
