@@ -1,5 +1,6 @@
 4.1 [Next Release]:
 - Added show detail previous bans message on join
+- Added sendDetailPrevBansOnJoin configuration
 - Added permission: exempt from kicks (mcbans.kick.exempt)
 - Fixed language file warning
 - Fixed ban sync
